# surrogate_v2

./: .gitignore  CCM_Surrogate_Research_Plan.docx  README.md  ccm.py  pyproject.toml  requirements.txt  run_experiments.py  system.py
configs/: adaptive_ablation.yaml  convergence_test.yaml  default.yaml  full_experiment.yaml  hr_focused.yaml  method_comparison.yaml  quick_validation.yaml  robustness_smoke.yaml  smoke_test.yaml  t_sweep_refined.yaml
docs/: README_zh.md  log_results_v1_fixes.md  make_pipeline_figure.py  paper.md  实验操作文档.md
surrogate_ccm/: __init__.py
surrogate_ccm/ccm/: __init__.py  ccm_core.py  embedding.py  network_ccm.py
surrogate_ccm/evaluation/: __init__.py  metrics.py
surrogate_ccm/experiments/: __init__.py  exp_bivariate.py  exp_coupling_strength.py  exp_network_topology.py  exp_noise.py  exp_surrogate_comparison.py  exp_surrogate_robustness.py
surrogate_ccm/generators/: __init__.py  fitzhugh_nagumo.py  henon.py  hindmarsh_rose.py  kuramoto.py  logistic.py  lorenz.py  network.py  rossler.py
surrogate_ccm/surrogate/: __init__.py  aaft_surrogate.py  adaptive.py  fft_surrogate.py  iaaft_surrogate.py  multivariate_surrogate.py  phase_surrogate.py  random_reorder.py  timeshift_surrogate.py  twin_surrogate.py
surrogate_ccm/testing/: __init__.py  hypothesis_test.py  se_ccm.py
surrogate_ccm/utils/: io.py  parallel.py
surrogate_ccm/visualization/: __init__.py  convergence_plot.py  heatmap.py  network_plot.py
